# deltavote

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  HANDOVER.md  LICENSE  README.md  TASKS.md  pyproject.toml
.github/workflows/: test.yml
src/deltavote/: __init__.py  core.py  design.py  equivalence.py  inflight.py
tests/: test_core.py  test_design.py  test_equivalence.py  test_inflight.py
