[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "deltavote"
version = "0.1.0.dev0"
description = "δ-margin majority voting: formulas and estimators from Boyarskaya & Ipeirotis (JAIR)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Margarita Boyarskaya" },
    { name = "Panagiotis G. Ipeirotis", email = "ipeirotis@gmail.com" },
]
keywords = [
    "majority-voting",
    "crowdsourcing",
    "quality-assurance",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
]

[project.urls]
Homepage = "https://github.com/ipeirotis/deltavote"
Issues = "https://github.com/ipeirotis/deltavote/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
